# solar-analyzer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  GIT_STRATEGY.md  QUICK_START.md  README.md  ROADMAP.md  TESTING.md  alembic.ini  debug_pvs6.py  debug_sync.py  dev-setup.sh  docker-compose.yml  import_historical_data.py  main.py  pyproject.toml  ruff.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20250803_1554-f64d40dd0fb0_initial_tables.py  20250803_1759-37aad88426c6_add_logging_and_monitoring_tables.py
src/solar_analyzer/: __init__.py  cli.py  config.py  core.py  logging_config.py  logging_db_handler.py  main.py
src/solar_analyzer/api/: __init__.py  pvs6_local.py  routes.py  sunpower_cloud.py  websockets.py
src/solar_analyzer/data/: __init__.py  database.py  models.py  schemas.py
src/solar_analyzer/static/css/: style.css
src/solar_analyzer/static/js/: dashboard.js  history.js  main.js  panels.js  power-flow.js  settings.js  websocket.js
src/solar_analyzer/templates/: base.html  dashboard.html  history.html  panels.html  settings.html
src/solar_analyzer/utils/: __init__.py  sample_data.py
src/solar_analyzer/visualization/: dashboard.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_dashboard.py
tests/integration/: __init__.py  test_api_endpoints.py
tests/unit/: __init__.py  test_models.py
